platformlar kısmı değiştirildi

--- a/bilgisayar.html
+++ b/bilgisayar.html
@@ -89,7 +89,7 @@
     </nav>
 
 
-    <!-- başlangıç katman içerik -->
+    <!-- slider -->
     <div class="container mt-5" style="display: flex; justify-content: center;">
       <div id="carouselExampleAutoplaying" style=" width: 700px; margin-top:20px;" class="carousel slide"
         data-bs-ride="carousel">
@@ -117,137 +117,115 @@
       </div>
     </div>
 
-    <!-- ilk katman içerik -->
-    <div class="container mt-5" style="display: flex;">
-      <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-        <img src="resim/doom ethernal.jpg" class="card-img-top" style="background-color: gray;" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Doom Ethernal</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+    <!-- ilk katman içerik --> 
+    <div class="container text-center">
+      <div class="row justify-content-center" style="margin-top: 100px;">
+        <div class="col">
+          <div class="card h-100">
+            <img src="resim/doom ethernal.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Doom Ethernal</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+            </div>
+          </div>
         </div>
-      </div>
-      <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-        <img src="resim/rdr2.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Red Dead Redemption 2</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+        <div class="col">
+          <div class="card h-100">
+            <img src="resim/calisto.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Calisto Protocol</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+              <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+            </div>
+          </div>
         </div>
-      </div>
-
-      <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-        <img src="resim/calisto.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Calisto Protocol</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
-        </div>
-      </div>
-
-      <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-        <img src="resim/need for speed.jpg" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Need For Speed</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-            content.</p>
-          <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+        <div class="col">
+          <div class="card h-100">
+            <img src="resim/need for speed.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Need For Speed:Heat</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+              <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+
 
   <!-- İkinci Katman İçerik -->
-  <div class="container mt-5" style="display: flex;">
-    <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-      <img src="resim/god of war.jpg" class="card-img-top" style="background-color: gray;">
-      <div class="card-body">
-        <h5 class="card-title">God Of War</h5>
-        <p class="card-text">Spartalı savaşçı ve Eski Yunan savaş Tanrısı Kratos'un Yunan Tanrılarından intikamını
-          almasını konu alan bir oyundur</p>
-        <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+  <div class="container text-center">
+    <div class="row justify-content-center" style="margin-top: 100px;">
+      <div class="col">
+        <div class="card h-100">
+          <img src="resim/god of war.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">God Of War</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="resim/outlast.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Outlast</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="resim/call of duty.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Detroit Became Human</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+          </div>
+        </div>
       </div>
     </div>
-
-    <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-      <img src="resim/outlast.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Outlast</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.</p>
-        <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
-      </div>
-    </div>
-
-    <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-      <img src="resim/crysis.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Crysis</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.</p>
-        <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
-      </div>
-    </div>
-
-    <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-      <img src="resim/detroit.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Detroit Became Human</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.</p>
-        <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
-      </div>
-    </div>
-  </div>
   </div>
 
   <!-- Üçüncü Katman İçerik  -->
-  <div class="container mt-5" style="display: flex;">
-    <div class="card" style="width: 18rem; margin-top: 30px; margin-left:-50px; display: inline-block;">
-      <img src="resim/elden ring.jpg" class="card-img-top" style="background-color: gray;" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Elden Ring</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.</p>
-        <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+  <div class="container text-center">
+    <div class="row justify-content-center" style="margin-top: 100px;">
+      <div class="col">
+        <div class="card h-100">
+          <img src="resim/elden ring.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Elden Ring</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+          </div>
+        </div>
       </div>
-    </div>
-
-    <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px; margin-left: 100px;">
-      <img src="resim/dying light.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Dying Light</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.</p>
-        <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+      <div class="col">
+        <div class="card h-100">
+          <img src="resim/dying light.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Dying Light</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+          </div>
+        </div>
       </div>
-    </div>
-
-
-    <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-      <img src="resim/little.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Little Nightmares</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.</p>
-        <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
-      </div>
-    </div>
-
-    <div class="card" style="width: 18rem; display: inline-block; margin-top: 30px;  margin-left: 100px;">
-      <img src="resim/witcher.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Witcher 3 Wild Hunt</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.</p>
-        <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+      <div class="col">
+        <div class="card h-100">
+          <img src="resim/little.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Little Nightmares</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <a href="#" class="btn btn-primary">Detaylı Görmek İçin</a>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-  </div>
+
 
 
 
