--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     background-size: cover;
     background-attachment: fixed;
   }
+
 </style>
 <body>
   <div class="sayfa">
@@ -100,13 +101,13 @@
         class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="resim/god of war.jpg" class="d-block w-100">
+            <img src="resim/calisto.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="resim/doom ethernal.jpg" class="d-block w-100">
+            <img src="resim/rdr2.jpg" class="d-block w-100">
           </div>
           <div class="carousel-item">
-            <img src="resim/call of duty.jpg" class="d-block w-100">
+            <img src="resim/ratchet.jpg" class="d-block w-100">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
