--- a/hakkımızda.html
+++ b/hakkımızda.html
@@ -87,74 +87,7 @@
             </div>
         </nav>
 
-        <div class="container mt-5" style="display: flex;">
-            <div id="carouselExampleAutoplaying" style=" width: 700px; margin-top:20px; margin-left:280px; " class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img src="resim/resident evil.jpg" class="d-block w-100">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="resim/rdr2.jpg" class="d-block w-100">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="resim/call of duty.jpg" class="d-block w-100">
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="visually-hidden">Next</span>
-                </button>
-              </div>
-        </div>
-
-        <div class="container text-center">
-            <div class="row justify-content-center" style="margin-top: 100px;">
-              <div class="col">
-                <div class="card h-100">
-                  <img src="resim/doom ethernal.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card h-100">
-                  <img src="resim/calisto.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col">
-                <div class="card h-100">
-                  <img src="resim/alien.jpg" class="card-img-top" alt="...">
-                  <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          
-
-        <div class="container-fluid">
-
-
-
-
-
-              </div>
-
-        </div>
-
-          <!-- sayfa geçiş en alt kısım
+           sayfa geçiş en alt kısım
   <div class="container mt-5" style="margin-right: 100px;">
     <nav aria-label="Page navigation example">
       <ul class="pagination justify-content-end">
@@ -170,7 +103,7 @@
         </li>
       </ul>
     </nav>
-  </div> -->
+  </div> 
 </body>
 
 </body>
