--- a/macera.html
+++ b/macera.html
@@ -94,13 +94,13 @@
           <div id="carouselExampleAutoplaying" style="max-width: 700px; margin-top: 20px;" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="resim/elden ring.jpg" class="d-block w-100">
+                <img src="resim/watch dogs.jpg" class="d-block w-100">
               </div>
               <div class="carousel-item">
                 <img src="resim/witcher.jpg" class="d-block w-100">
               </div>
               <div class="carousel-item">
-                <img src="resim/rdr2.jpg" class="d-block w-100">
+                <img src="resim/ratchet.jpg" class="d-block w-100">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
